@@ -42,7 +42,7 @@ CREATE TABLE `game` (
   `start_date` timestamp NULL DEFAULT NULL,
   `activity_date` timestamp NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
   `update_counter` int(11) NOT NULL DEFAULT '0',
-  `last_updater` varchar(16) CHARACTER SET utf8 NOT NULL DEFAULT '0',
+  `last_updater` varchar(45) CHARACTER SET utf8 NOT NULL DEFAULT '0',
   `box_id` int(11) NOT NULL,
   `cp_count` int(11) NOT NULL DEFAULT '0',
   `status` varchar(10) CHARACTER SET utf8 NOT NULL DEFAULT 'Active',
@@ -62,9 +62,9 @@ CREATE TABLE `game_snap` (
   `cp_id` int(11) NOT NULL AUTO_INCREMENT,
   `game_id` int(11) NOT NULL,
   `cp_date` timestamp NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
-  `player` varchar(16) CHARACTER SET utf8 NOT NULL,
-  `last_updater` varchar(16) CHARACTER SET utf8 NOT NULL,
-  `game_round` varchar(16) CHARACTER SET utf8 NOT NULL,
+  `player` varchar(45) CHARACTER SET utf8 NOT NULL,
+  `last_updater` varchar(45) CHARACTER SET utf8 NOT NULL,
+  `game_round` varchar(32) CHARACTER SET utf8 NOT NULL,
   `json_text` mediumtext CHARACTER SET utf8 NOT NULL,
   PRIMARY KEY (`cp_id`),
   INDEX (`game_id`, `cp_id` DESC)
