@@ -1,6 +1,8 @@
 # control.sh
 # This file must be updated with the proper parameters before
 # BOARD18update is run to update the BOARD18 web site.
+# 
+# This is version 2 of this script.
 
 # Set BD18Site to the root of the BOARD18 web site.
 BD18Site=~/dev?.board18.org/
@@ -9,4 +11,4 @@ BD18Site=~/dev?.board18.org/
 BD18Old=~/dev?.board18.old/
 
 # Set BD18New to the webroot directory in the new BOARD18 release.
-boxesRoot=~/board18-x.x.x/webroot/
+BD18New=~/board18-x.x.x/webroot/
